// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TotalRewardsPageComponent should show the create new banner when no statements are returned 1`] = `
<pf-total-rewards-statement-list-page
  __ngContext__={[Function LRootView]}
  copyingStatement$={[Function Store]}
  copyingStatementSuccess$={[Function Store]}
  deletingStatement$={[Function Store]}
  deletingStatementError$={[Function Store]}
  deletingStatementSuccess$={[Function Store]}
  focusedTab$={[Function Store]}
  isCopyStatementModalOpen$={[Function Store]}
  isDeleteStatementModalOpen$={[Function Store]}
  openActionMenuStatement$={[Function Store]}
  route={[Function Object]}
  router={[Function Object]}
  statementsLoading$={[Function Observable]}
  statementsLoadingError$={[Function Observable]}
  statementsSearchTerm$={[Function Store]}
  statementsTotal$={[Function Observable]}
  store={[Function Store]}
  urlParamSubscription={[Function Subscriber]}
>
  <pf-page-with-title-bar>
    Total Rewards
    <a
      class="pt-2 pr-2"
      data-qa-id="lnk-recentDownloads"
      href="/client/notifications"
      id="recent-download"
      target="_blank"
    >
      Recently Generated
    </a>
    <pf-input-debounce
      class="mr-2"
    />
    <div
      class="d-flex flex-column h-100"
    >
      <div
        class="h-100"
      >
        <ul
          class="nav-tabs nav"
          ngbnav=""
          role="tablist"
        >
          <li
            class="nav-item"
            id="Statements"
            title="Statements"
          >
            <a
              aria-controls="ngb-nav-4-panel"
              aria-disabled="false"
              aria-selected="true"
              class="nav-link active"
              href=""
              ngbnavlink=""
              role="tab"
            >
              Statements
            </a>
          </li>
          <li
            class="nav-item"
            id="Templates"
            title="Templates"
          >
            <a
              aria-controls="ngb-nav-5-panel"
              aria-disabled="false"
              aria-selected="false"
              class="nav-link"
              href=""
              ngbnavlink=""
              role="tab"
            >
              Templates
            </a>
          </li>
        </ul>
        <div
          class="tab-content"
        >
          <div
            class="tab-pane show active"
            id="ngb-nav-4-panel"
            ngbnavpane=""
            role="tabpanel"
          >
            <div
              class="h-100"
            >
              <pf-statements-grid />
            </div>
          </div>
          <div
            class="tab-pane"
            id="ngb-nav-5-panel"
            ngbnavpane=""
            role="tabpanel"
          >
            <pf-total-rewards-template-card-selector />
          </div>
        </div>
      </div>
    </div>
    <pf-modal-form
      title="Delete Statement"
    >
      <p>
        Are you sure you want to delete 
        <strong>
        </strong>
        ? This action is permanent and cannot be recovered.
      </p>
    </pf-modal-form>
    <pf-modal-form
      title="Copy Statement"
    >
      <p>
        You are about to create a copy of 
        <strong>
        </strong>
        . Are you sure you want to continue?
      </p>
    </pf-modal-form>
  </pf-page-with-title-bar>
</pf-total-rewards-statement-list-page>
`;

exports[`TotalRewardsPageComponent should show the grid component when statements are returned 1`] = `
<pf-total-rewards-statement-list-page
  __ngContext__={[Function LRootView]}
  copyingStatement$={[Function Store]}
  copyingStatementSuccess$={[Function Store]}
  deletingStatement$={[Function Store]}
  deletingStatementError$={[Function Store]}
  deletingStatementSuccess$={[Function Store]}
  focusedTab$={[Function Store]}
  isCopyStatementModalOpen$={[Function Store]}
  isDeleteStatementModalOpen$={[Function Store]}
  openActionMenuStatement$={[Function Store]}
  route={[Function Object]}
  router={[Function Object]}
  statementsLoading$={[Function Store]}
  statementsLoadingError$={[Function Store]}
  statementsSearchTerm$={[Function Store]}
  statementsTotal$={[Function Observable]}
  store={[Function Store]}
  urlParamSubscription={[Function Subscriber]}
>
  <pf-page-with-title-bar>
    Total Rewards
    <a
      class="pt-2 pr-2"
      data-qa-id="lnk-recentDownloads"
      href="/client/notifications"
      id="recent-download"
      target="_blank"
    >
      Recently Generated
    </a>
    <pf-input-debounce
      class="mr-2"
    />
    <div
      class="d-flex flex-column h-100"
    >
      <div
        class="h-100"
      >
        <ul
          class="nav-tabs nav"
          ngbnav=""
          role="tablist"
        >
          <li
            class="nav-item"
            id="Statements"
            title="Statements"
          >
            <a
              aria-controls="ngb-nav-2-panel"
              aria-disabled="false"
              aria-selected="true"
              class="nav-link active"
              href=""
              ngbnavlink=""
              role="tab"
            >
              Statements
            </a>
          </li>
          <li
            class="nav-item"
            id="Templates"
            title="Templates"
          >
            <a
              aria-controls="ngb-nav-3-panel"
              aria-disabled="false"
              aria-selected="false"
              class="nav-link"
              href=""
              ngbnavlink=""
              role="tab"
            >
              Templates
            </a>
          </li>
        </ul>
        <div
          class="tab-content"
        >
          <div
            class="tab-pane show active"
            id="ngb-nav-2-panel"
            ngbnavpane=""
            role="tabpanel"
          >
            <div
              class="h-100"
            >
              <pf-statements-grid />
            </div>
          </div>
          <div
            class="tab-pane"
            id="ngb-nav-3-panel"
            ngbnavpane=""
            role="tabpanel"
          >
            <pf-total-rewards-template-card-selector />
          </div>
        </div>
      </div>
    </div>
    <pf-modal-form
      title="Delete Statement"
    >
      <p>
        Are you sure you want to delete 
        <strong>
        </strong>
        ? This action is permanent and cannot be recovered.
      </p>
    </pf-modal-form>
    <pf-modal-form
      title="Copy Statement"
    >
      <p>
        You are about to create a copy of 
        <strong>
        </strong>
        . Are you sure you want to continue?
      </p>
    </pf-modal-form>
  </pf-page-with-title-bar>
</pf-total-rewards-statement-list-page>
`;
